# profilage

./: .dockerignore  Dockerfile  Dockerfile.renderer  design-qa.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: auth.py  company.py  person.py  rate_limit.py
app/core/: config.py
app/services/: cache.py  company_affiliate.py  company_dart.py  company_disclosure_events.py  company_disclosure_summary.py  company_insights.py  company_profile_summary.py  company_shareholders.py  company_store.py  headless_fetch.py  person_page_analysis.py  person_profile.py  person_search.py
app/static/: app.js  compare-page.js  compare.html  index.html  person-page.js  person.html  profile-chart-2.css  profile-chart.css  profile-page-3.js  profile-page-5.js  profile.html  profile.js  styles.css
browser-companion/: README.md  manifest.json  popup.html  popup.js
docs/: company-insight-section-redesign-plan.md  company_api_spec.md  deployed-ui-spacing-alignment-improvement-plan.md  person-search-integration-implementation-plan.md  profile-detail-ui-follow-up-plan.md  profile-top-section-redesign-plan.md  security-hardening-plan.md  ui-ux-code-review-2026-07-10.md
docs/superpowers/plans/: 2026-07-04-company-compare-trust-sharing-plan.md  2026-07-04-company-data-enrichment-plan.md  2026-07-04-company-profile-trust-insights.md  2026-07-05-company-feature-opportunities.md  2026-07-05-dart-disclosure-llm-summary-pr-plan.md  (+4 more)
renderer/: __init__.py  worker.py
tests/: test_company_affiliate_api.py  test_headless_fetch.py  test_person_api.py
wiki/: company_api_wiki.md
(+1 files in other folders)
