[project]
name = "profilage"
version = "0.1.0"
description = "Company and people search service"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=45.0.0",
    "defusedxml>=0.7.1",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.2.0",
    "redis>=5.0.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
